# iQuant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  make.ps1  pyproject.toml
apps/: README.md
apps/admin-web/: .env.example  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/admin-web/src/: App.vue  main.ts  router.ts
apps/api/: pyproject.toml
apps/api/src/iquant_api/: __init__.py  bootstrap.py  config.py  deps.py  error_logging.py  main.py
apps/api/src/iquant_api/cli/: admin_bootstrap.py  seed_test_cyb.py
apps/api/src/iquant_api/middleware/: admin_audit.py  admin_rate_limit.py  security_headers.py
apps/api/src/iquant_api/routes/v1/: __init__.py  admin_audit.py  admin_auth.py  admin_market.py  backtests.py  client_errors.py  health.py  labels.py  replays.py  strategies.py
apps/miniprogram/: README.md
apps/worker/: pyproject.toml
apps/worker/src/iquant_worker/: __init__.py  celery_app.py  error_logging.py
apps/worker/src/iquant_worker/tasks/: market.py  strategy.py
docs/api/: README.md
docs/architecture/: API_DESIGN.md  ASYNC_TASKS.md  CACHING.md  CAPACITY_PLANNING.md  DATA_STORAGE.md  DEPLOYMENT.md  OBSERVABILITY.md  PROJECT_STRUCTURE.md  PYTHON_PROJECT_LAYOUT.md  README.md  SECURITY_AND_COMPLIANCE.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_OPTIMIZATION_REVIEW.md  TECH_STACK.md
docs/architecture/modules/: annotation.md  market-data.md
docs/decisions/: ADR-0001-strategy-dsl.md  ADR-0002-separate-labeling-and-blind-replay.md  ADR-0003-ai-boundary.md  ADR-0004-wechat-miniprogram-first.md  ADR-0005-fastapi-as-web-framework.md  ADR-0006-timescaledb-for-market-data.md  ADR-0007-celery-for-async-tasks.md  ADR-0008-modular-monolith-first.md  ADR-0009-backtest-engine-boundary.md  ADR-0010-admin-auth-mvp.md  ADR-0011-blind-replay-primary-strategy-path.md  README.md
docs/product/: ITERATION_PLAN.md  MVP_PRODUCT_PLAN.md
docs/product/modules/: 01-historical-labeling.md  02-ideal-strategy-generation.md  03-backtest-validation.md  04-blind-replay.md  05-execution-gap-diagnosis.md  06-training.md  07-ai-assistant.md  08-strategy-library-alerting-prep.md  09-data-and-sample-assets.md  10-wechat-miniprogram-experience.md  README.md
scripts/: README.md
services/: README.md
services/annotation-service/: pyproject.toml
services/annotation-service/src/iquant_annotation_service/: __init__.py  config.py  db.py
services/annotation-service/src/iquant_annotation_service/models/: __init__.py  label_batch.py  label_batch_summary.py  label_pair.py  label_queue_item.py  label_session.py
services/annotation-service/src/iquant_annotation_service/repositories/: label_batch_repo.py  label_session_repo.py
services/annotation-service/src/iquant_annotation_service/usecases/: batch_profile.py  batches.py  labels.py  pair_math.py  schemas.py
services/annotation-service/tests/: test_batch_profile.py  test_batch_progress.py  test_pair_math.py
services/backtest-service/: pyproject.toml
services/backtest-service/src/iquant_backtest_service/: __init__.py  config.py  db.py
services/backtest-service/src/iquant_backtest_service/models/: __init__.py  backtest_report.py  backtest_task.py  base.py
services/backtest-service/src/iquant_backtest_service/repositories/: backtest_repo.py
services/backtest-service/src/iquant_backtest_service/usecases/: backtests.py  schemas.py
services/blind-replay-service/: pyproject.toml
services/blind-replay-service/tests/: test_bar_loader_alignment.py  test_blind_display.py  test_consistency_profile.py  test_features.py  test_round_grouping.py  test_simulation.py  test_symbol_pool_exclude.py  test_visible_bars.py
services/identity-service/: pyproject.toml
services/identity-service/src/iquant_identity_service/: __init__.py  config.py  crypto.py  db.py  jwt_tokens.py  redis_client.py  turnstile.py
services/identity-service/src/iquant_identity_service/models/: __init__.py  admin_audit_log.py  admin_refresh_token.py  admin_user.py  base.py
services/identity-service/src/iquant_identity_service/repositories/: admin_audit_repo.py  admin_refresh_token_repo.py  admin_user_repo.py
services/identity-service/src/iquant_identity_service/usecases/: audit.py  auth.py  bootstrap.py  schemas.py  sse_ticket.py
services/identity-service/tests/: test_auth_crypto.py
services/market-service/: pyproject.toml
services/market-service/src/iquant_market_service/: __init__.py  config.py  db.py  progress_bus.py
services/market-service/src/iquant_market_service/models/: __init__.py  base.py  market_bar.py  market_import.py  symbol.py  tdx_host.py
services/market-service/src/iquant_market_service/repositories/: import_task_repo.py  market_bar_repo.py  symbol_repo.py  tdx_host_repo.py
services/market-service/src/iquant_market_service/usecases/: __init__.py  batch_online_fetch.py  fetch_online.py  import_local.py  manage_hosts.py  query_bars.py  scan_local.py  schemas.py  sync_symbols.py
services/market-service/tests/: test_batch_online_fetch_dates.py  test_batch_runtime_metrics.py  test_sync_symbols.py
services/strategy-service/: pyproject.toml
services/strategy-service/src/iquant_strategy_service/: __init__.py  config.py  db.py
services/strategy-service/src/iquant_strategy_service/models/: __init__.py  behavior_strategy.py  behavior_strategy_version.py
services/strategy-service/src/iquant_strategy_service/repositories/: strategy_repo.py
services/strategy-service/src/iquant_strategy_service/usecases/: generate_from_blind.py  schemas.py  strategies.py
services/strategy-service/tests/: test_generate_from_blind.py
storage/: README.md
storage/migrations/: alembic.ini  env.py
storage/migrations/versions/: 20260514_0001_init_business_schema.py  20260515_0002_admin_identity.py  20260516_0003_label_annotation.py  20260517_0004_label_batch.py  20260517_0005_label_batch_summary.py  20260519_0006_blind_replay.py  20260519_0007_behavior_strategy.py  (+3 more)
tests/: README.md
(+77 files in other folders)
