[project]
name = "iquant"
version = "0.1.0"
description = "iQuant 单仓多包工程根，不直接发布"
requires-python = ">=3.12,<3.13"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "services/market-service",
    "packages/domain",
    "packages/market-data",
]

[tool.uv.sources]
iquant-domain = { workspace = true }
iquant-market-data = { workspace = true }
iquant-market-service = { workspace = true }
iquant-api = { workspace = true }
iquant-worker = { workspace = true }

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "apps/admin-web", "storage/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "ASYNC"]
ignore = ["E501"]   # 由 formatter 控制行宽

[tool.ruff.format]
quote-style = "double"

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["storage/migrations/versions", "apps/admin-web"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["packages", "services", "apps", "tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# ─── dev dependencies（在根 workspace 声明，方便所有 member 共享） ─────────────
[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "watchfiles>=0.24.0",
    "types-redis>=4.6.0",
]
