[project]
name = "iquant-api"
version = "0.1.0"
description = "iQuant FastAPI 应用"
requires-python = ">=3.12,<3.13"
dependencies = [
    "iquant-domain",
    "iquant-market-data",
    "iquant-market-service",
    "iquant-identity-service",
    "iquant-annotation-service",
    "iquant-blind-replay-service",
    "iquant-strategy-service",
    "iquant-strategy-dsl",
    "iquant-backtest-service",
    "iquant-backtest-engine",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
    "structlog>=24.4.0",
    "sse-starlette>=2.1.3",
    "psycopg[binary]>=3.2.3",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iquant_api"]
