[project]
name = "iquant-worker"
version = "0.1.0"
description = "iQuant Celery worker 应用"
requires-python = ">=3.12,<3.13"
dependencies = [
    "iquant-domain",
    "iquant-market-data",
    "iquant-market-service",
    "iquant-backtest-service",
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
    "structlog>=24.4.0",
    "watchfiles>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iquant_worker"]
