[project]
name = "iquant-annotation-service"
version = "0.1.0"
description = "iQuant 历史 K 线标注（样本会话与买卖对）"
requires-python = ">=3.12,<3.13"
dependencies = [
    "iquant-domain",
    "iquant-market-service",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iquant_annotation_service"]
