[project]
name = "iquant-identity-service"
version = "0.1.0"
description = "iQuant 管理员鉴权、会话与审计"
requires-python = ">=3.12,<3.13"
dependencies = [
    "iquant-domain",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "structlog>=24.4.0",
    "redis>=5.0.8",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iquant_identity_service"]
