[project]
name = "iquant-market-service"
version = "0.1.0"
description = "iQuant 行情服务层：用例编排、ORM、仓储"
requires-python = ">=3.12,<3.13"
dependencies = [
    "iquant-domain",
    "iquant-market-data",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "structlog>=24.4.0",
    "redis>=5.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iquant_market_service"]
